ensures ui canvas is correct size on mobile ensuring ui elements appear in correct position

--- a/src/stylesheets/gravity_simulation.css
+++ b/src/stylesheets/gravity_simulation.css
@@ -4,7 +4,7 @@ div.ui-canvas-container {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   pointer-events: none;
 }
 
